# pitchgpt

./: .coverage  .gitignore  README.md  coverage.xml  test-requirements.txt  tox.ini
notebooks/: sandbox.ipynb
pitchgpt/pitchgpt/data/: pitchfork.py
pitchgpt/tests/fixtures/: models.py
src/: pyproject.toml
src/pitchgpt/: config.py
src/pitchgpt/data/: pitchfork.py
src/pitchgpt/data/models/: artist.py  genre.py  headers.py  review.py
src/pitchgpt/prompts/: entities.py
src/tests/: test_api_headers.py  test_ingestion.py  test_reviews.py
src/tests/fixtures/: pitchfork.py
