[tool.poetry]
name = "pitchgpt"
version = "0.1.0"
description = ""
authors = ["Rafael <rafael.pierre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = {extras = ["http2"], version = "^0.25.1"}
chromadb = "^0.4.17"
tenacity = "^8.2.3"
pydantic = "^2.5.1"
tox = "^4.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
